--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
   </ul>
   <h2>Nara Han 한나라 Portfolio</h2>
   <p>As an adventurous young fella, travelling was a destiny. Not just overseas trips, <a href="www.naver.com" target="_blank" title="html5 specification">working in different fields</a> get her more interesting life. <strong>Living in Australia</p>
-  <img src="1.jpg" width="50%">  <p style="margin-top:45px;">Worked in <u>Music marketing</u></strong></p>
+  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/i0p1bmr0EmE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p><img src="1.jpg" width="50%">  <p style="margin-top:45px;">Worked in <u>Music marketing</u></strong></p>
   Nara Han lived in Korea
+  <p><div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-a4umgrnxg0.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
 </body>
 </html>
