--- a/1.html
+++ b/1.html
@@ -17,6 +17,21 @@
     <li>2017</li>
   </ul>
   <h2>University</h2>
-  <p>Always have NO MONEY, but the most memorable and fun time</p>
+<p>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5e3903d6298c395d1ce60e52/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+</p>
+
 </body>
 </html>
